--- a/trabdupla.html
+++ b/trabdupla.html
@@ -7,6 +7,10 @@
     <title>trabalho dupla</title>
 </head>
 <body>
-    <h1>Guilherme e Renan</h1>
+    <h1>Guilherme Benevides
+        Escolhi o T.I por simples afinidade, sempre gostei de tecnologia, robôs e todas essas maravilhas que a maquina faz. 
+    </h1>
+    <img src="/home/guilherme/renan/fut
+    " alt="">
 </body>
 </html>
