Adicionado arquivo de texto

--- a/trabdupla.html
+++ b/trabdupla.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Guilherme e Renan</h1>
+    <h1>Renan Ribeiro</h1>
+    <h2>Tenho 30 anos, sou natural de Ivaiporã PR. Gosto de ler, jogar video game, 
+        assistir séries, correr na esteira e ouvir música. Trabalhei com vendas quase 
+        minha vida inteira, estagnado na carreira estava a procura de uma nova profissão. 
+        Felizmente quando soube mais do que se tratava a carreira de programador, eu não tive 
+        dúvidas de que era isso que eu queria fazer. </h2>
 </body>
 </html>
